# Data-Governance-Agent

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
agents/: agent_interface.py
agents/orchestrator/: main.py  orchestrator_agent.py
agents/sub_agents/: classification_agent.py  db_agent.py  policy_agent.py  remedition_agent.py
api/: app.py
data/ads_db/: init.sql  seed.sql
data/data_registry_db/: init.sql
data/governance_db/: init.sql  seed.sql
frontend/app/sources/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/custom/data_sources/: AddSourceForm.tsx  dataSourcesPanel.tsx  tree.tsx  types.ts
frontend/lib/: mock-data.ts
mcp_connection/: mcp_client.py  mcp_server.py
mcp_connection/servers/: db_server.py  file_server.py  main_mcp_server.py
services/RAG_service/: chunker.py  vector_store.py
services/db_service/: crud.py  db_factory.py
tools/: tool_executor.py
vector_store/: chroma.sqlite3
workflow/: nodes.py  pipeline.py  types.py
