[project]
name = "data-governance-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "groq>=1.1.1",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.1",
    "mcp[cli]>=1.25.0",
    "ollama>=0.6.1",
    "psycopg2>=2.9.11",
    "werkzeug>=3.1.6",
]
